# agentic-stock-analyzer-crewai-crew

./: .gitignore  README.md  pyproject.toml
src/crewsdem/: crew.py  main.py
src/crewsdem/config/: agents.yaml  tasks.yaml
src/crewsdem/tools/: stock_picker.py
