[project]
name = "crewsdem"
version = "0.1.0"
description = "crewsdem using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.9.2"
]

[project.scripts]
crewsdem = "crewsdem.main:run"
run_crew = "crewsdem.main:run"
train = "crewsdem.main:train"
replay = "crewsdem.main:replay"
test = "crewsdem.main:test"
run_with_trigger = "crewsdem.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
